# unifyapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini  requirements.txt  test.py
scripts/: build.sh
src/app/: crud.py  main.py
src/app/api/: api.py  dependencies.py  deps.py
src/app/api/routers/: admin.py  auth.py  groups.py  lecturers.py  lessons.py  login.py  schedule.py  students.py  teachers.py  user.py  users.py
src/app/core/: config.py  exc.py  exceptions.py
src/app/core/db/: __init__.py  database.py  redis.py
src/app/core/schemas/: admin.py  etc.py  grade.py  group.py  lecturer.py  schedule.py  student.py  teacher.py  token.py  user.py  utils.py
src/app/core/security/: jwt.py  middleware.py  utils.py
src/app/core/services/: google.py  gsheets.py
src/creds/: creds.json
src/test/: auth.py  t.py  test_users.py
src/tests/: __init__.py  conftest.py  test_database.py  test_main.py  test_student.py
src/tests/api/: test_auth.py
src/tests/routes/: test_auth.py
